--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <title>Bootstrap</title>
 </head>
 <body>
-
-            
    <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
@@ -66,10 +64,10 @@
 
        <div class="option">
             <div class="galery">
-                <button><i class="fas fa-th"></i></button>
+                <button class="btn btn-light"><i class="fas fa-th"></i></button>
             </div>
             <div class="list">
-                <button><i class="fas fa-square"></i></button>
+                <button class="btn btn-light"><i class="fas fa-square"></i></button>
             </div>
 
         </div>
