--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         <div class="row">
             <div class="col-sm-6"> 
             <div class="galery">
-            <button class="btn btn-light" ><a href="./gallery.html" target=""><i class="fas fa-th"></i></button></a>
+            <button class="btn btn-light" ><a href="./gallery.html" target="_self"><i class="fas fa-th"></i></button></a>
             </div>
             </div>
             <div class="col-sm-6" >
             <div class="list">
-            <button class="btn btn-light" ><a href="./list.html" target=""><i class="fas fa-square"></i></button></a>
+            <button class="btn btn-light" ><a href="./list.html" target="_self"><i class="fas fa-square"></i></button></a>
             </div>
             </div>
         </div>
