--- a/list.html
+++ b/list.html
@@ -13,6 +13,10 @@
        <div class="footer-ficha">
        <p>This is my first photo of the fedd, this is a multi line comment for testing purpose. I am learning to code with <strong>#BreatheCode</strong></p>
        </div>
+
+       <div class="comment">
+           
+      </div>   
    </div>
 
    
