--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/244c5f576e.js" crossorigin="anonymous"></script>    
     <link rel="stylesheet" href="style.css">
     <title>Bootstrap</title>
 </head>
@@ -70,7 +71,7 @@
             </div>
             <div class="col-sm-6" >
             <div class="list">
-            <button class="btn btn-light" ><a href="./list.html" target="_self"><i class="fas fa-square"></i></button></a>
+            <button class="btn btn-light" ><a href="./postList.html" target="_self"><i class="fas fa-square"></i></button></a>
             </div>
             </div>
         </div>
