--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="col-sm-6" >
             <div class="list">
-            <button class="btn btn-light" ><a href="./postList.html" target="_self"><i class="fas fa-square"></i></button></a>
+            <button class="btn btn-light" ><a href="./fichas.html" target="_self"><i class="fas fa-square"></i></button></a>
             </div>
             </div>
         </div>
