--- a/fichas.html
+++ b/fichas.html
@@ -131,3 +131,8 @@
 
 </body>
 </html>
+
+
+<!--Código para correr un scroll en StarWars
+    
+    <div className = "row flex-row flex-nowrap overflow-auto"> Aplicar componente </div>-->
